guestbook/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: guestbook.kubernetes.io
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook
          servicePort: 3000
